.antlr/InputParser.java
// Generated from d:/Documents/GitHub/InputOutputBNF/Input.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class InputParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		SCANNER_CLASS=10, SYSTEM_IN=11, INPUT_METHOD=12, DATA_TYPE=13, DIGIT=14, 
		LETTER=15, SYMBOL=16, BOOLEAN=17, EPSILON=18;
	public static final int
		RULE_input_statement = 0, RULE_scanner_declaration = 1, RULE_input_expression = 2, 
		RULE_solitary_input_expression = 3, RULE_new_scanner = 4, RULE_package = 5, 
		RULE_radix = 6, RULE_variable_declaration = 7, RULE_variable_name = 8, 
		RULE_special_char = 9, RULE_num = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"input_statement", "scanner_declaration", "input_expression", "solitary_input_expression", 
			"new_scanner", "package", "radix", "variable_declaration", "variable_name", 
			"special_char", "num"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "';'", "'.'", "'('", "')'", "'new'", "'java.util.'", "'_'", 
			"'$'", "'Scanner'", "'System.in'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "SCANNER_CLASS", 
			"SYSTEM_IN", "INPUT_METHOD", "DATA_TYPE", "DIGIT", "LETTER", "SYMBOL", 
			"BOOLEAN", "EPSILON"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Input.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public InputParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Input_statementContext extends ParserRuleContext {
		public Scanner_declarationContext scanner_declaration() {
			return getRuleContext(Scanner_declarationContext.class,0);
		}
		public Input_expressionContext input_expression() {
			return getRuleContext(Input_expressionContext.class,0);
		}
		public Solitary_input_expressionContext solitary_input_expression() {
			return getRuleContext(Solitary_input_expressionContext.class,0);
		}
		public Input_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_statement; }
	}

	public final Input_statementContext input_statement() throws RecognitionException {
		Input_statementContext _localctx = new Input_statementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input_statement);
		try {
			setState(26);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SCANNER_CLASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				scanner_declaration();
				setState(23);
				input_expression();
				}
				break;
			case T__7:
			case T__8:
			case DATA_TYPE:
			case LETTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(25);
				solitary_input_expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Scanner_declarationContext extends ParserRuleContext {
		public TerminalNode SCANNER_CLASS() { return getToken(InputParser.SCANNER_CLASS, 0); }
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public New_scannerContext new_scanner() {
			return getRuleContext(New_scannerContext.class,0);
		}
		public Scanner_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scanner_declaration; }
	}

	public final Scanner_declarationContext scanner_declaration() throws RecognitionException {
		Scanner_declarationContext _localctx = new Scanner_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scanner_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(SCANNER_CLASS);
			setState(29);
			variable_name();
			setState(30);
			match(T__0);
			setState(31);
			new_scanner();
			setState(32);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Input_expressionContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public TerminalNode INPUT_METHOD() { return getToken(InputParser.INPUT_METHOD, 0); }
		public RadixContext radix() {
			return getRuleContext(RadixContext.class,0);
		}
		public Input_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_expression; }
	}

	public final Input_expressionContext input_expression() throws RecognitionException {
		Input_expressionContext _localctx = new Input_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_input_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			variable_declaration();
			setState(35);
			match(T__0);
			setState(36);
			variable_name();
			setState(37);
			match(T__2);
			setState(38);
			match(INPUT_METHOD);
			setState(39);
			match(T__3);
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 312064L) != 0)) {
				{
				setState(40);
				radix();
				}
			}

			setState(43);
			match(T__4);
			setState(44);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Solitary_input_expressionContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public New_scannerContext new_scanner() {
			return getRuleContext(New_scannerContext.class,0);
		}
		public TerminalNode INPUT_METHOD() { return getToken(InputParser.INPUT_METHOD, 0); }
		public RadixContext radix() {
			return getRuleContext(RadixContext.class,0);
		}
		public Solitary_input_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_solitary_input_expression; }
	}

	public final Solitary_input_expressionContext solitary_input_expression() throws RecognitionException {
		Solitary_input_expressionContext _localctx = new Solitary_input_expressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_solitary_input_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			variable_declaration();
			setState(47);
			match(T__0);
			setState(48);
			new_scanner();
			setState(49);
			match(T__2);
			setState(50);
			match(INPUT_METHOD);
			setState(51);
			match(T__3);
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 312064L) != 0)) {
				{
				setState(52);
				radix();
				}
			}

			setState(55);
			match(T__4);
			setState(56);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class New_scannerContext extends ParserRuleContext {
		public PackageContext package_() {
			return getRuleContext(PackageContext.class,0);
		}
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public TerminalNode SYSTEM_IN() { return getToken(InputParser.SYSTEM_IN, 0); }
		public New_scannerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_new_scanner; }
	}

	public final New_scannerContext new_scanner() throws RecognitionException {
		New_scannerContext _localctx = new New_scannerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_new_scanner);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__5);
			setState(59);
			package_();
			setState(60);
			match(T__3);
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
			case LETTER:
				{
				setState(61);
				variable_name();
				}
				break;
			case SYSTEM_IN:
				{
				setState(62);
				match(SYSTEM_IN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(65);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageContext extends ParserRuleContext {
		public TerminalNode SCANNER_CLASS() { return getToken(InputParser.SCANNER_CLASS, 0); }
		public PackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package; }
	}

	public final PackageContext package_() throws RecognitionException {
		PackageContext _localctx = new PackageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_package);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(67);
				match(T__6);
				}
			}

			setState(70);
			match(SCANNER_CLASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RadixContext extends ParserRuleContext {
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public TerminalNode EPSILON() { return getToken(InputParser.EPSILON, 0); }
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public RadixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_radix; }
	}

	public final RadixContext radix() throws RecognitionException {
		RadixContext _localctx = new RadixContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_radix);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				num();
				}
				break;
			case EPSILON:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				match(EPSILON);
				}
				break;
			case T__7:
			case T__8:
			case LETTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				variable_name();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declarationContext extends ParserRuleContext {
		public Variable_nameContext variable_name() {
			return getRuleContext(Variable_nameContext.class,0);
		}
		public TerminalNode DATA_TYPE() { return getToken(InputParser.DATA_TYPE, 0); }
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variable_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DATA_TYPE) {
				{
				setState(77);
				match(DATA_TYPE);
				}
			}

			setState(80);
			variable_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variable_nameContext extends ParserRuleContext {
		public List<Special_charContext> special_char() {
			return getRuleContexts(Special_charContext.class);
		}
		public Special_charContext special_char(int i) {
			return getRuleContext(Special_charContext.class,i);
		}
		public List<TerminalNode> LETTER() { return getTokens(InputParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(InputParser.LETTER, i);
		}
		public List<NumContext> num() {
			return getRuleContexts(NumContext.class);
		}
		public NumContext num(int i) {
			return getRuleContext(NumContext.class,i);
		}
		public Variable_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_name; }
	}

	public final Variable_nameContext variable_name() throws RecognitionException {
		Variable_nameContext _localctx = new Variable_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
				{
				setState(82);
				special_char();
				}
				break;
			case LETTER:
				{
				setState(83);
				match(LETTER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 49920L) != 0)) {
				{
				setState(89);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DIGIT:
					{
					setState(86);
					num();
					}
					break;
				case LETTER:
					{
					setState(87);
					match(LETTER);
					}
					break;
				case T__7:
				case T__8:
					{
					setState(88);
					special_char();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Special_charContext extends ParserRuleContext {
		public Special_charContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_special_char; }
	}

	public final Special_charContext special_char() throws RecognitionException {
		Special_charContext _localctx = new Special_charContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_special_char);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_la = _input.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumContext extends ParserRuleContext {
		public TerminalNode DIGIT() { return getToken(InputParser.DIGIT, 0); }
		public List<NumContext> num() {
			return getRuleContexts(NumContext.class);
		}
		public NumContext num(int i) {
			return getRuleContext(NumContext.class,i);
		}
		public NumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num; }
	}

	public final NumContext num() throws RecognitionException {
		NumContext _localctx = new NumContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_num);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(DIGIT);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(97);
					num();
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}